# pypi-bonjour

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tutorial.html
.github/workflows/: build_publish_pypi.yml  build_wheels.yml  gh-pages.yml
docs/: genindex.html  index.html  objects.inv
docs/.doctrees/: environment.pickle  index.doctree
docs/source/: conf.py  index.md  tutorial.md
pypi_bonjour/: __init__.py  common.py  common_cpp.cpp  common_cpp_cmake.cpp
pypi_boujour/: __init__.py
scripts/: before_all.sh  before_build.sh
site-build/: search.html
site-build/_sources/: index.md.txt
