[project]
name = "pypi_bonjour"
version = "0.0.3"
description = "Tutorial on publishing to PyPI"
authors = [
  {name = "Bolun Dai", email = "daibolun19950216@gmail.com"},
]
license = {text = "MIT License"}
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["numpy>=1.26.4"]


[build-system]
requires = ["setuptools >= 61.0.0", "pybind11 >= 2.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pypi_bonjour"]
include-package-data = true

[tool.cibuildwheel]
skip = "pp* *musllinux*"
archs = "x86_64 aarch64" 