[project]
name = "pypi_bonjour"
version = "0.0.4"
description = "Tutorial on publishing to PyPI"
authors = [
  {name = "Bolun Dai", email = "daibolun19950216@gmail.com"},
]
license = {text = "MIT License"}
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["numpy>=1.26.4"]


[build-system]
requires = ["setuptools >= 61.0.0", "pybind11 >= 2.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pypi_bonjour"]
include-package-data = true

[tool.cibuildwheel]
skip = "pp* *musllinux*"  # Skip building for PyPy and musllinux
archs = "x86_64 aarch64"  # Build only for x86_64 and aarch64
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"  # Use the debian-based manylinux image
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64"  # Use the debian-based manylinux image